--- a/src/blog/problem/我不想当组长.md
+++ b/src/blog/problem/我不想当组长.md
@@ -10,11 +10,11 @@ order: 2
 
 # 我不想当组长
 
-# 简要题面
+## 简要题面
 
 
 
-# 题面
+## 题面
 
 众所周知，老师们都热衷于分组学习，这一天芳芳来到了一个有n位同学的新班级，每位同学都有一个独一无二的序号，从1到n，毫无意外，这个班的老师也要求分组学习。
 
@@ -26,37 +26,37 @@ order: 2
 
 
 
-## 输入描述
+### 输入描述
 
 第一行输入n，表示学生人数
 
 接下来n行每行一个数字，表示每位同学最好的朋友的序号
 
-## 输出描述
+### 输出描述
 
 按序号从小到大输出所有小组长的序号，每行一个序号
 
-## 输入输出样例
+### 输入输出样例
 
-### 输入 #1
+#### 输入 #1
 
 ```
 5
 5 3 2 1 4
 ```
 
-### 输出 #1
+#### 输出 #1
 
 ```
 1
 2
 ```
 
-## 说明/提示
+### 说明/提示
 
-# 解法
+## 解法
 
-# 参考程序
+## 参考程序
 
 ```cpp
 #include<bits/stdc++.h>
