--- a/src/blog/problem/1.md
+++ b/src/blog/problem/1.md
@@ -9,21 +9,21 @@ order: 3
 
 # 二维前缀和
 
-# 简要题面
+## 简要题面
 
 大小 1000*1000 的地图中有 n 个人，每个人位置为 (x~i~,y~i~) ，活动范围的横纵坐标都不能离当前坐标超过 s~i~ （ 0 $\le$ s~i~ $\le$ 10^9^ ）。
 一场游戏需要刚好五个人进行，地图内能进行多少场本质不同的游戏。
 场地不同和参与人不同都视为不同。
 
-# 题面
+## 题面
 
-## 输入描述
+### 输入描述
 
-## 输出描述
+### 输出描述
 
-## 输入输出样例
+### 输入输出样例
 
-### 输入 #1
+#### 输入 #1
 ```
 5
 1 1 1
@@ -33,16 +33,16 @@ order: 3
 5 5 5
 ```
 
-### 输出 #1
+#### 输出 #1
 ```
 108
 ```
 
-## 说明/提示
+### 说明/提示
 
-# 解法
+## 解法
 
-# 参考程序
+## 参考程序
 ```cpp
 #include<bits/stdc++.h>
 using namespace std;
