--- a/src/blog/problem/2.md
+++ b/src/blog/problem/2.md
@@ -9,30 +9,57 @@ order: 4
 
 # dp
 
-# 简要题面
+## 简要题面
 
 输入两个串 a 和 b ，a 中有多少个子序列是 b 
 
-# 题面
+## 题面
 
-## 输入描述
+### 输入描述
 
-## 输出描述
+### 输出描述
 
-## 输入输出样例
+### 输入输出样例
 
-### 输入 #1
+#### 输入 #1
+```
+scppcsscpspccsp
+scpc
 ```
 
+#### 输出 #1
+```
+28
 ```
 
-### 输出 #1
+### 说明/提示
+
+## 解法
+
+## 参考程序
+```cpp
+#include<bits/stdc++.h>
+using namespace std;
+typedef long long ll;
+ll dp[1000005];
+vector<int>vec[30];
+int main(){
+    ios::sync_with_stdio(0),cin.tie(0),cout.tie(0);
+    string a,b;
+    cin>>a>>b;
+    for(int i=1;i<b.size();i++){
+        vec[b[i]-'a'].push_back(i);
+    }
+    for(int i=0;i<='z'-'a';i++){
+        sort(vec[i].begin(),vec[i].end(),greater<int>());
+    }
+    for(int i=0;i<a.size();i++){
+        for(auto j:vec[a[i]-'a']){
+            dp[j]+=dp[j-1];
+        }
+        if(a[i]==b[0]) dp[0]++;
+    }
+    cout<<dp[b.size()-1]<<'\n';
+    return 0;
+}
 ```
-
-```
-
-## 说明/提示
-
-# 解法
-
-# 参考程序
