更改题目部分格式

--- a/src/blog/problem/SCPC/小鸡计算器.md
+++ b/src/blog/problem/SCPC/小鸡计算器.md
@@ -10,11 +10,11 @@ order: 5
 
 # 小鸡计算器
 
-# 简要题面
+## 简要题面
 
 给定一个包含+ - * / ( ) 的表达式，输出运算结果
 
-# 题面
+## 题面
 
 被聪明的参赛者们打开了第一个宝箱后，小鸡发誓要夺回属于她的一切！
 
@@ -62,7 +62,7 @@ order: 5
 
 题目只保证初始表达式中不含负数，计算过程中可能出现负数。
 
-# 解法
+## 解法
 
 计算表达式时，我们维护两个栈：
 
@@ -94,7 +94,7 @@ order: 5
   $\frac{a}{b} \div \frac{c}{d} = \frac{a \times d}{b \times c}$
 - 计算后需求 **最大公因数（gcd）**，将分数化为最简形式。
 
-# 参考程序
+## 参考程序
 
 ```cpp
 #include<bits/stdc++.h>
