智能指针weak_ptr部分

--- a/src/blog/learning/C++/智能指针.md
+++ b/src/blog/learning/C++/智能指针.md
@@ -13,17 +13,21 @@ order: 1
 
 # 智能指针
 
-## std::auto_ptr
+
+C++ 智能指针是用于自动管理动态资源（主要是堆内存）的对象，能够有效防止资源泄漏和重复释放问题。
+常见的智能指针包括 `auto_ptr`、`unique_ptr`、`shared_ptr` 和 `weak_ptr` 。
+
+---
+
+## 📌std::auto_ptr（已废弃）
 
 ### 基本原理
 
-`auto_ptr` 通过**管理权转移**的方式解决智能指针的拷贝问题，
-保证一个资源在任何时刻都只有一个对象在对其进行管理，
-这时同一个资源就不会被多次释放了。
+`auto_ptr` 通过**管理权转移**的方式避免资源重复释放：
+在拷贝时将资源的所有权从一个对象转移给另一个对象，原来的对象指针被置为 `nullptr`，
+确保资源仅被释放一次。
 
-
-如下，$ap1$ 赋值给 $ap2$ 后，将内存管理权转移给 $ap2$, 
-此时 $ap1$ 指针为 `nullptr`。
+如下例所示，`ap1` 的所有权被转移给 `ap2`，`ap1` 变为 `nullptr`：
 
 ```cpp
 int main() 
@@ -31,28 +35,16 @@ int main()
 	std::auto_ptr<int> ap1(new int(1));
 	std::auto_ptr<int> ap2(ap1);
 	*ap2 = 10;
-	//*ap1 = 20; //error
+	//*ap1 = 20; // error ，ap1 已经为 nullptr
 	return 0;
 }
 ```
 
-但一个对象的管理权转移后也就意味着，该对象不能再用对原来管理的资源进行访问了，
-否则程序就会崩溃，因此使用 `auto_ptr` 之前必须先了解它的机制，否则程序很容易出问题，
-很多公司也都明确规定了禁止使用 `auto_ptr`。
+然而，这种隐式的资源转移容易导致悬空指针或程序崩溃，很多公司已禁止使用。
+C++11 后 `auto_ptr` 被 `unique_ptr` 所取代。
 
 ### 模拟实现
 
-简易版的 `auto_ptr` 的实现步骤如下：
-
-1. 在构造函数中获取资源，在析构函数中释放资源，利用对象的生命周期来控制资源。
-
-2. 对 `*` 和 `->` 运算符进行重载，使 `auto_ptr` 对象具有指针一样的行为。
-
-3. 在拷贝构造函数中，用传入对象管理的资源来构造当前对象，并将传入对象管理资源的指针置空。
-
-4. 在拷贝赋值函数中，先将当前对象管理的资源释放，然后再接管传入对象管理的资源，最后将传入对象管理资源的指针置空。
-
-代码如下：
 ```cpp
 namespace ff
 {
@@ -60,7 +52,6 @@ namespace ff
 	class auto_ptr
 	{
 	public:
-		//RAII
 		auto_ptr(T* ptr = nullptr)
 			:m_ptr(ptr)
 		{}
@@ -76,19 +67,18 @@ namespace ff
 		auto_ptr(auto_ptr<T>& ap)
 			:m_ptr(ap.m_ptr)
 		{
-			ap.m_ptr = nullptr; //管理权转移后ap置空
+			ap.m_ptr = nullptr; 
 		}
 		auto_ptr<T>& operator=(auto_ptr<T>& ap)
 		{
 			if (this != &ap)
 			{
-				delete m_ptr;		//释放自己管理的资源
-				m_ptr = ap.m_ptr;	//接管ap的资源
-				ap.m_ptr = nullptr;	//管理权转移后ap置空
+				delete m_ptr;		
+				m_ptr = ap.m_ptr;	
+				ap.m_ptr = nullptr;
 			}
 			return *this;
 		}
-		//可以像指针一样使用
 		T& operator*()
 		{
 			return *m_ptr;
@@ -98,40 +88,30 @@ namespace ff
 			return &m_ptr;
 		}
 	private:
-		T* m_ptr; //管理的资源
+		T* m_ptr; 
 	};
 }
 ```
 
-## std::unique_ptr
+## 📌std::unique_ptr
 
 ### 基本原理
 
-`unique_ptr` 通过**防拷贝**的方式解决智能指针的拷贝问题，
-也就是简单粗暴的防止对智能指针对象进行拷贝，
-这样也能保证资源不会被多次释放。如下:
+`unique_ptr` 通过禁止拷贝的方式确保资源的唯一拥有权，从而防止重复释放。如下例：
 
 ```cpp
 int main()
 {
 	std::unique_ptr<int> up1 = std::make_unique<int>(0);
-	//std::unique_ptr<int> up2(up1); //error
+	//std::unique_ptr<int> up2(up1); // 编译错误
 	return 0;
 }
 ```
 
 但防拷贝其实也不是一个很好的办法，因为总有一些场景需要进行拷贝。
-如果想要“共享”指针的时候，就需要用到 `shared_ptr` 了。
+如果想要共享资源，就需要用到 `shared_ptr` 了。
 
 ### 模拟实现
-
-简易版的 `unique_ptr` 的实现步骤如下：
-
-1. 在构造函数中获取资源，在析构函数中释放资源，利用对象的生命周期来控制资源。
-2. 对 `*` 和 `->` 运算符进行重载，使 `unique_ptr` 对象具有指针一样的行为。
-3. 用 C++98 的方式将拷贝构造函数和拷贝赋值函数声明为私有，或者用 C++11 的方式在这两个函数后面加上 `=delete`，防止外部调用。
-
-代码如下：
 
 ```cpp
 namespace ff
@@ -140,7 +120,6 @@ namespace ff
 	class unique_ptr
 	{
 	public:
-		//RAII
 		unique_ptr(T* ptr = nullptr)
 			:m_ptr(ptr)
 		{}
@@ -153,7 +132,6 @@ namespace ff
 				m_ptr = nullptr;
 			}
 		}
-		//可以像指针一样使用
 		T& operator*()
 		{
 			return *m_ptr;
@@ -162,56 +140,39 @@ namespace ff
 		{
 			return &m_ptr;
 		}
-		//防拷贝
+		// 禁止拷贝构造与赋值
 		unique_ptr(unique_ptr<T>& up) = delete;
 		unique_ptr<T>& operator=(unique_ptr<T>& up) = delete;
 	private:
-		T* m_ptr; //管理的资源
+		T* m_ptr; 
 	};
 }
 ```
 
-## std::shared_ptr
+## 📌std::shared_ptr
 
 ### 基本原理
 
-`shared_ptr` 通过**引用计数**的方式解决智能指针的拷贝问题。
+`shared_ptr` 采用**引用计数**机制管理资源：
+- 每块资源关联一个引用计数，记录当前有多少个 `shared_ptr` 实例共享该资源；
+- 拷贝时引用计数 `+1`，析构或重新赋值时 `-1`；
+- 当引用计数降为 $0$，资源自动释放。
 
-- 每一个被管理的资源都有一个对应的引用计数，
-  通过这个引用计数记录着当前有多少个对象在管理着这块资源。
-- 当新增一个对象管理这块资源时则将该资源对应的引用计数进行 `++`，
-  当一个对象不再管理这块资源或该对象被析构时则将该资源对应的引用计数进行 `--`。
-- 当一个资源的引用计数减为 $0$ 时说明已经没有对象在管理这块资源了，这时就可以将该资源进行释放了。
-
-通过这种引用计数的方式就能支持多个对象一起管理某一个资源， 也就是支持了智能指针的拷贝，
-并且只有当一个资源对应的引用计数减为 $0$ 时才会释放资源，因此保证了同一个资源不会被释放多次。
-如下：
 ```cpp
 int main()
 {
 	std::shared_ptr<int> sp1 = std::make_shared<int>(1);
 	{
 		std::shared_ptr<int> sp2(sp1);
-		std::cout << sp1.use_count() << std::endl; //2
+		std::cout << sp1.use_count() << std::endl; // 输出2
 	}
-	std::cout << sp1.use_count() << std::endl; //1
+	std::cout << sp1.use_count() << std::endl; // 输出1
 	return 0;
 }
 ```
 
 ### 模拟实现
 
-简易版的 `shared_ptr` 的实现步骤如下：
-
-1. 在 `shared_ptr` 类中增加一个成员变量 `count`，表示智能指针对象管理的资源对应的引用计数。
-2. 在构造函数中获取资源，并将该资源对应的引用计数设置为 $1$，表示当前只有一个对象在管理这个资源。
-3. 在拷贝构造函数中，与传入对象一起管理它管理的资源，同时将该资源对应的引用计数 `++`。
-4. 在拷贝赋值函数中，先将当前对象管理的资源对应的引用计数 `--`（如果减为 $0$ 则需要释放），
-   然后再与传入对象一起管理它管理的资源，同时需要将该资源对应的引用计数 `++`。
-5. 在析构函数中，将管理资源对应的引用计数 `--`，如果减为 $0$ 则需要将该资源释放。
-6. 对 `*` 和 `->` 运算符进行重载，使 `shared_ptr` 对象具有指针一样的行为。
-
-代码如下：
 ```cpp
 namespace ff
 {
@@ -219,7 +180,6 @@ namespace ff
 	class shared_ptr
 	{
 	public:
-		//RAII
 		shared_ptr(T* ptr = nullptr)
 			: m_ptr(ptr)
 			, m_count(new int(1))
@@ -246,9 +206,9 @@ namespace ff
 		}
 		shared_ptr<T>& operator=(shared_ptr<T>& sp)
 		{
-			if (m_ptr != sp.m_ptr) //管理同一块空间的对象之间无需进行赋值操作
+			if (m_ptr != sp.m_ptr) 
 			{
-				if (--(*m_count) == 0) //将管理的资源对应的引用计数--
+				if (--(*m_count) == 0) 
 				{
 					if (m_ptr != nullptr)
 					{
@@ -257,18 +217,16 @@ namespace ff
 						delete m_count;
 					}
 				}
-				m_ptr = sp.m_ptr;		//与sp对象一同管理它的资源
-				m_count = sp.m_count;	//获取sp对象管理的资源对应的引用计数
-				(*m_count)++;			//新增一个对象来管理该资源，引用计数++
+				m_ptr = sp.m_ptr;		
+				m_count = sp.m_count;	
+				(*m_count)++;			
 			}
 			return *this;
 		}
-		//获取引用计数
 		int use_count()
 		{
 			return *m_count;
 		}
-		//可以像指针一样使用
 		T& operator*()
 		{
 			return *m_ptr;
@@ -278,13 +236,17 @@ namespace ff
 			return &m_ptr;
 		}
 	private:
-		T* m_ptr;		//管理的资源
-		int* m_count;	//管理的资源对应的引用计数
+		T* m_ptr;		
+		int* m_count;	
 	};
 }
 ```
 
 ### std::shared_ptr的循环引用问题
+
+在某些场景中，多个 `shared_ptr` 对象可能会相互引用，从而形成**循环引用**，导致引用计数无法归零，资源泄露。
+
+例如双向链表节点：
 
 ```cpp
 struct Point
@@ -294,10 +256,9 @@ struct Point
 	int m_value;
 	Point(int value)
 		: m_value(value)
-	{
-		m_prev = nullptr;
-		m_next = nullptr;
-	}
+		, m_prev(nullptr)
+		, m_next(nullptr)
+	{}
 	~Point()
 	{
 		std::cout << "delete: " << m_value << std::endl;
@@ -311,4 +272,60 @@ int main()
 	sp2->m_prev = sp1;
 	return 0;
 }
+```
+
+上述代码中，`sp1` 和 `sp2` 相互引用，导致它们的引用计数始终不为 $0$，程序结束时资源也不会被释放。
+
+#### 解决方法：使用 `std::weak_ptr`
+
+`std::weak_ptr` 是一种不拥有资源的智能指针，可以打破循环引用链。
+在设计结构中，建议将一方（通常是“父”指针）改为 `weak_ptr`。
+
+## 📌std::weak_ptr
+
+### 基本原理
+
+`weak_ptr` 是为了解决 `shared_ptr` 的循环引用问题而引入的辅助智能指针，它不拥有资源的所有权，不会影响引用计数。
+
+通过 `weak_ptr` 观察一个由 `shared_ptr` 管理的对象，可以在需要时临时提升为 `shared_ptr` 使用，
+如果资源已释放，提升会失败，避免了悬空指针和资源泄露。
+
+使用 `lock()` 方法可以将 `weak_ptr` 升级为 `shared_ptr`，如下所示：
+
+```cpp
+int main()
+{
+	std::shared_ptr<int> sp = std::make_shared<int>(10);
+	std::weak_ptr<int> wp = sp;
+	if (auto temp = wp.lock()) // 成功提升为 std::shared_ptr
+	{
+		std::cout << *temp << std::endl;
+	}
+	else
+	{
+		std::cout << "资源已释放。" << std::endl;
+	}
+	return 0;
+}
+```
+
+在解决循环引用时，可以将一方的 `shared_ptr` 替换为 `weak_ptr`，
+如下改写双向链表的例子：
+
+```cpp
+struct Point
+{
+	std::weak_ptr<Point> m_prev; // 弱引用，不影响引用计数
+	std::shared_ptr<Point> m_next;
+	int m_value;
+	Point(int value)
+		: m_value(value)
+		, m_prev{}
+		, m_next(nullptr)
+	{}
+	~Point()
+	{
+		std::cout << "delete: " << m_value << std::endl;
+	}
+};
 ```
