修改联合索引

--- a/src/blog/learning/数据库/联合索引.md
+++ b/src/blog/learning/数据库/联合索引.md
@@ -21,9 +21,9 @@ order: 4
 这样一个索引就能起到多个索引的作用，减少了写操作和磁盘空间的开销。
 
 ### 覆盖索引
-如果拆线呢语句中的选择列完全由联合索引覆盖，比如：
+如果查询语句中的选择列完全由联合索引覆盖，比如：
 ```mysql
-select a,b,c from table where a='xxx' and b='xxx'
+select a,b,c from table where a='xxx' and b='xxx';
 ```
 MySQL可以直接通过遍历索引获取数据，无需回表，大大减少了随机 IO 操作。
 
